src/terraform/modules/services/database/rds/oracle-xe/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: oracle
  namespace: ${namespace}
spec:
  entryPoints:
    - oracle
  routes:
  - kind: Rule
    match: HostSNI(`*`)
    services:
    - name: oraclexe
      port: 1521
