src/terraform/modules/services/database/rds/oracle-xe/templates/oem-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oracle
  namespace: ${namespace}
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`oracle.infrastructure.${domain-name}`) && PathPrefix(`/`)
    services:
    - name: oraclexe
      port: 5500
      scheme: https
  tls:
    secretName: oracle-cert
